--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "mint-ui": "^2.2.13",
+    "mock.js": "^0.2.0",
+    "mockjs": "^1.0.1-beta3",
     "qs": "^6.7.0",
     "swiper": "^4.5.0",
     "velocity-animate": "^1.5.2",
